--- a/Html/testing.html
+++ b/Html/testing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-    <meta property="al:ios:url" content="watsonstw://PDP/123456" />
-    <meta property="al:ios:app_store_id" content="12345" />
+    <meta property="al:ios:url" content="watsonstw://PDP/BP_264037" />
+    <meta property="al:ios:app_store_id" content="477968775" />
     <meta property="al:ios:app_name" content="watsonstw" />
     <meta property="og:title" content="example page title" />
     <meta property="og:type" content="website" />
@@ -10,6 +10,5 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
