--- a/Html/testing.html
+++ b/Html/testing.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <meta property="al:ios:url" content="watsonstw://PDP/BP_264037" />
+    <meta property="al:ios:url" content="watsonstw://PDP/264037" />
     <meta property="al:ios:app_store_id" content="477968775" />
     <meta property="al:ios:app_name" content="watsonstw" />
     <meta property="og:title" content="example page title" />
